[package]
name = "chat-delegate"
version = "0.1.0"
edition = "2021"

[features]
default = ["freenet-main-delegate"]
freenet-main-delegate = []

[dependencies]
ciborium.workspace = true
freenet-stdlib = { version = "0.3.2", features = ["contract"] }
bs58 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
river-core.workspace = true
ed25519-dalek = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

