[package]
name = "chat-delegate"
version = "0.1.0"
edition = "2021"

[features]
default = ["freenet-main-delegate"]
freenet-main-delegate = []

[dependencies]
ciborium.workspace = true
freenet-stdlib.workspace = true
bs58 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
river-core = { workspace = true, features = ["ecies"] }
ed25519-dalek = { workspace = true }
# NOTE: Do NOT add a `getrandom` or `rand` dep here. The freenet-core
# delegate runtime on wasm32-unknown-unknown has no `getrandom` backend, so
# any path that pulls those crates in causes wasm-bindgen placeholder
# imports that wasmtime cannot resolve at instantiation time (issue
# freenet/river#241). The river-core `ecies` feature is the deterministic
# surface and must not pull `rand`; if you need to encrypt a fresh value
# here, derive randomness from delegate-controlled inputs via blake3 (see
# `encrypt_secret_for_member` for the pattern).

[dev-dependencies]
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand.workspace = true
freenet-scaffold.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

